--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- select box -->
   <div class="select-box">
-    <header>Tic Tac Toe</header>
+    <header>X or O</header>
     <div class="content">
       <div class="title">Select which you want to be?</div>
       <div class="options">
